New Features: -Added Spiky Mobs that will chase you once you enter their range. They are not mobile unless you enter their trigger range. They do, however, flip elft and right "looking" for you.
Bug Fix:
-Death Sound + Effects now work properly. No longer will you bounce away once you have died.
-Allow mobs to fall through spikes.

--- a/2D Prototyping.csproj
+++ b/2D Prototyping.csproj
@@ -77,10 +77,10 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\DestroyMe.cs" />
     <Compile Include="Assets\Scripts\cameraFollow2DPlatformer.cs" />
-    <Compile Include="Assets\Scripts\enemyController.cs" />
     <Compile Include="Assets\Scripts\enemyDamage.cs" />
     <Compile Include="Assets\Scripts\enemyHealth.cs" />
     <Compile Include="Assets\Scripts\enemyMovementController.cs" />
+    <Compile Include="Assets\Scripts\fallThrough.cs" />
     <Compile Include="Assets\Scripts\playerController.cs" />
     <Compile Include="Assets\Scripts\playerHealth.cs" />
     <Compile Include="Assets\Scripts\projectileController.cs" />
