--- a/2D Prototyping.csproj
+++ b/2D Prototyping.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Assets\Scripts\enemyHealth.cs" />
     <Compile Include="Assets\Scripts\enemyMovementController.cs" />
     <Compile Include="Assets\Scripts\fallThrough.cs" />
+    <Compile Include="Assets\Scripts\healthPickup.cs" />
     <Compile Include="Assets\Scripts\playerController.cs" />
     <Compile Include="Assets\Scripts\playerHealth.cs" />
     <Compile Include="Assets\Scripts\projectileController.cs" />
