Bug Fixes: - Players and other objects are now "killed" whenever they fall off of the map. Temporary solution for this.

--- a/2D Prototyping.csproj
+++ b/2D Prototyping.csproj
@@ -81,6 +81,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Cleaner.cs" />
     <Compile Include="Assets\Scripts\DestroyMe.cs" />
     <Compile Include="Assets\Scripts\cameraFollow2DPlatformer.cs" />
     <Compile Include="Assets\Scripts\enemyDamage.cs" />
